--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
     <div class="container">
       <div class="sidebar">
         <div style="background: linear-gradient(229.99deg, #11dee9 -26%, #017e8b 145%);">
-          <h1>Snow in the desert</h1>
-          <p>Love, death & robots</p>
+          <h1>Wukong Prime</h1>
+          <p>Warframe</p>
         </div>
-        <div style="background: linear-gradient(215.32deg, #f90306 -1%, #9e0706 124%);">
-          <h1>Life Hutch</h1>
-          <p>Love, death & robots</p>
+        <div style="background: linear-gradient(220.16deg, #000000 -8%, #242323 138%);">
+          <h1>Ash Prime</h1>
+          <p>Warframe</p>
         </div>
         <div style="background: linear-gradient(221.87deg, #8308ea 1%, #5305af 128%);">
-          <h1>Zima Blue</h1>
-          <p>Love, death & robots</p>
+          <h1>Revenant Prime</h1>
+          <p>Warframe</p>
         </div>
-        <div style="background: linear-gradient(220.16deg, #ffe101 -8%, #f39102 138%);">
-          <h1>Automated Customer Service</h1>
-          <p>Love, death & robots</p>
+        <div style="background: linear-gradient(215.32deg, #f90306 -50%, #9e0706 124%);">
+          <h1>Ember Prime</h1>
+          <p>Warframe</p>
         </div>
       </div>
       <div class="main-slide">
-        <div style="background-image: url('https://images.unsplash.com/photo-1601574968106-b312ac309953?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1996&q=80');"></div>
-        <div style="background-image: url('https://images.unsplash.com/photo-1511447333015-45b65e60f6d5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2023&q=80');"></div>
-        <div style="background-image: url('https://images.unsplash.com/photo-1501529301789-b48c1975542a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');"></div>
-        <div style="background-image: url('https://images.unsplash.com/photo-1520263115673-610416f52ab6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80');"></div>
+        <div style="background-image: url('https://i.playground.ru/p/jsixD3dMPyG5itdCaa5gcA.jpeg');"></div>
+        <div style="background-image: url('https://cdna.artstation.com/p/assets/images/images/044/893/392/large/patrick-benai-thumb-1920-1174284.jpg?1641414315');"></div>
+        <div style="background-image: url('https://i.pinimg.com/originals/60/9c/69/609c69f9036ff86a82e84add2a443c26.png');"></div>
+        <div style="background-image: url('https://i.pinimg.com/originals/21/26/88/21268825010c50b07bed7f64706828f1.jpg');"></div>
       </div>
       <div class="controls">
         <button class="down-button">
